use ProcessBuilder to join stdout/stderr